--- a/.github/workflows/addItem.yml
+++ b/.github/workflows/addItem.yml
@@ -3,14 +3,20 @@ name: Sync issue to Azure DevOps work item
 on:
   issues:
     types:
-      [opened, edited, deleted, closed, reopened, labeled, unlabeled, assigned]
+      - [opened, edited, deleted, closed, reopened, labeled, unlabeled, assigned]
   issue_comment:
     types: [created, edited, deleted]
 
-
 jobs:
+  check-label:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check for AzureDevOps label
+        id: check-label
+        run: echo ::set-output name=has_label::$(if [[ $(jq -r ".issue.labels[].name" $GITHUB_EVENT_PATH) == *"AzureDevOps"* ]]; then echo "true"; else echo "false"; fi)
+
   alert:
-    if: ${{ !github.event.issue.pull_request && github.event.label.name == 'AzureDevOps'}}
+    if: ${{ !github.event.issue.pull_request && steps.check-label.outputs.has_label == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - uses: danhellem/github-actions-issue-to-work-item@master
