--- a/.github/workflows/addItem.yml
+++ b/.github/workflows/addItem.yml
@@ -12,6 +12,9 @@ jobs:
     if: ${{ !github.event.issue.pull_request && contains(github.event.issue.labels.*.name, 'AzureDevOps') }}
     runs-on: ubuntu-latest
     steps:
+      - name: Starting
+        run: echo "Starting"
+      
       - uses: danhellem/github-actions-issue-to-work-item@master
         env:
           ado_token: "${{ secrets.ADO_PERSONAL_ACCESS_TOKEN }}"
