--- a/.github/workflows/addItem.yml
+++ b/.github/workflows/addItem.yml
@@ -14,6 +14,14 @@ jobs:
     steps:
       - name: Starting
         run: echo "Starting"
+
+      - name: Echo Issue Information
+        run: |
+          echo "Issue Title: ${{ github.event.issue.title }}"
+          echo "Issue Number: ${{ github.event.issue.number }}"
+          echo "Issue Body: ${{ github.event.issue.body }}"
+          echo "Issue State: ${{ github.event.issue.state }}"
+          echo "Issue Labels: ${{ join(github.event.issue.labels.*.name, ',
       
       - uses: danhellem/github-actions-issue-to-work-item@master
         env:
